# pyDICOS

./: .gitignore  .gitignore.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Manifest.in  Pyproject.toml  README.md  pyDICOS.cc  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: publish-pypi-deploy.yml  publish-windows.yml  tests.yml
SimpleCT/: SimpleCT0000.dcs
notebooks/: tutorial.ipynb
pyDICOS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pydicos/: README.md  __init__.py  _dicosio.py  _loaders.py  version.py
pydicos/_loaders/: ATR.py  CT.py  DX.py  TDR.py  __init__.py
pydicos/metadata/: __init__.py  metadata.py
pydicos/utils/: __init__.py  time.py
python/: CTUserAPI.dcs  test_CT_read.py  test_CT_write.py  test_DX_read.py  test_DX_write.py  test_TDR_examples.py
python/CTwithTDR/: TDR.dcs
python/ClientNetworkingExamples/: ConnectManuallyToServerSendCEcho.py  ConnectManuallyToServerStartDicosSessionSendCEcho.py  CreateDicosClientManuallyConnectToDicosSeverSendCEcho.py  CreateDicosConnectToServerStartDicosSessionForSendCT_TDR_CEchoSendTotheNetworkCloseSessionStartAnotherDicosSessionSendingDX_TDRtoNetowrk.py  CreateDicosConnectToServerStartDicosSessionForSendCTandCEchoSendTotheNetwork.py  CreateDicosSendEchoCToDicosServer.py  CreateDicosServerAcceptMultipleClientsConnections.py  CreateDicosServerAcceptsConnectionsFromClientsValidUserName.py  CreateDicosServerAllowConnectionsFromSpecificClientsPresentValidUserNamePasscode.py  CreateDicosServerAllowfromConnectionsSpecificClientApplications.py  CreateDicosServerClientsPresentValidUserNamePasscode.py  CreateDicosWithUsernameAndPasscodeSendCEchoToServer.py  CreateDicosWithUsernameSendCEchoToServer.py  ErrorLog - DICOS Session Start Failed.txt  ErrorLog - Echo Failed.txt  ErrorLog-EchoExample.txt  UtilizeAPIUserLevelToSendDicosOverNetwork.py
python/DXFiles/: SimpleColorPaletteDX.dcs  SimplePresentationDX.dcs  SimpleProcessingDX.dcs
python/SimpleCT/: SimpleCT0000.dcs
python/SimpleDX/: SimplePresentationDX.dcs  SimpleProcessingDX.dcs
python/TDRFiles/: MultiplePTOsTDR.dcs  SimpleBaggageNoThreatTDR.dcs  SimpleBaggageTDR.dcs
src/: CMakeLists.txt  headers.hh  pyDICOS.cc  pymodCT.cc
src/Array1D/: CustomArray1D.hh  pyArray1D.cc  pyArray1D.hh
src/Array2D/: pyArray2D.hh
src/Array3DLarge/: Array3DLarge.hh
src/Bitmap/: pyBitmap.cc
src/CT/: pyCT.cc  pymodCT.cc
src/DX/: pyDX.cc  pymodDX.cc
src/DcsClient/: pyDcsClient.cc
src/DcsGUID/: pyDcsGUID.cc
src/DcsServer/: pyDcsServer.cc
src/DcsString/: pyDcsString.cc
src/ErrorLog/: pyErrorLog.cc
src/FILESYSTEM/: pyDicosFileListing.cc  pyFS.cc
src/GeneralSeriesModule/: pyGeneralSeriesModule.cc
src/IClientAuthenticationCallback/: AuthenticationCallback.cc  AuthenticationCallback.hh  pyAuthenticationCallback.cc  pyIClientAuthenticationCallback.cc
src/IDcsServer/: pyDcsServer.cc  pyIDcsServer.cc
src/IReceiveCallback/: DataProcessing.cc  DataProcessing.hh  pyDataProcessing.cc  pyIReceiveCallback.cc
src/Image2D/: pyImage2D.cc
src/MemManager/: CustomMemManager.cc  CustomMemManager.hh  MemoryBuffer.cc  MemoryManager.cc
src/Point3D/: Point3D.hh  pyPoint3D.hh
src/Section/: pySection.cc
src/SopClassUID/: pySopClassUID.cc
src/TDR/: pyTDR.cc  pymodTDR.cc
src/Vector3D/: pyVector3D.hh
src/Volume/: pyVolume.cc
tests/: conftest.py  test_CT_read.py  test_CT_write.py  test_DX_read.py  test_DX_write.py  test_TDR_examples.py  test_TDR_read.py  test_TDR_write.py  test_utils.py
tests/ClientNetworkingExamples/: ConnectManuallyToServerSendCEcho.py  ConnectManuallyToServerStartDicosSessionSendCEcho.py  CreateDicosConnectToServerStartDicosSessionForSendCT_TDR_CEchoSendTotheNetworkCloseSessionStartAnotherDicosSessionSendingDX_TDRtoNetowrk.py  CreateDicosConnectToServerStartDicosSessionForSendCTandCEchoSendTotheNetwork.py  CreateDicosSendEchoCToDicosServer.py  CreateDicosServerAcceptMultipleClientsConnections.py  CreateDicosServerAcceptsConnectionsFromClientsValidUserName.py  CreateDicosServerClientsPresentValidUserNamePasscode.py  (+7 more)
(+3744 files in other folders)
